@@ -355,3 +355,4 @@
 
         * Discard left Ctrl when AltGr is pressed (Windows XP)
 	* Fix the string value for the Delete key (Windows XP)
+	* Fix the key release values for non keystroke keys (Windows XP)
